# protofun-indexer

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  docker-compose.yml  schema.graphql  subgraph.yaml  substreams.yaml
db/: schema.sql
graph-node/: Dockerfile.posthog  docker-compose.yml  down.sh  posthog.conf  up.sh
graph-node/config/: config.toml
proto/: block_meta.proto
src/: db_out.rs  graph_out.rs  lib.rs
src/pb/: mod.rs  sf.ethereum.block_meta.v1.rs
