[package]
name = "protofun"
version = "1.0.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.0"
substreams-database-change = "1.0.0"
substreams-entity-change = "1.1"
substreams-ethereum = "0.9.0"
prost = "0.11"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
